--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,32 +5,12 @@ permalink: /publications/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
-
-{% include base_path %}
-
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
-    {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
-      {% if post.category != category[0] %}
-        {% continue %}
-      {% endif %}
-      {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
-        {% assign title_shown = true %}
-      {% endunless %}
-      {% include archive-single.html %}
-    {% endfor %}
-  {% endfor %}
-{% else %}
-  {% for post in site.publications reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
-{% endif %}
-
+## Journal Articles 
+1.	Yu X, Jarvis I, van den Bosch, M, Guhn M, Sbihi H, & Davies, H. Residential Exposure to Noise, Green Space, and Children’s Language Acquisition. Environment International. doi: https://doi.org/10.1016/j.envint.2025.109524
+2.	Dummer T. J. B, Yu X, Cui Y, Nauta L, Saint-Jacques N, Sweeney-Magee M, & Rainham, D. G. C. Traffic-related air pollution and risk of lung, breast and urinary tract cancer in Halifax, Nova Scotia. Journal of Occupational and Environmental Medicine. doi: 10.1097/JOM.0000000000002867 
+3.	Keats M. R, Yu X, Sweeney-Magee M, Forbes C. C, Grandy S. A, Sweeney E., & Dummer T. J. B. Use of wearable activity monitoring technologies to promote physical activity in cancer survivors: Challenges and opportunities for improved cancer care. International Journal of Environmental Research and Public Health. doi: 10.3390/ijerph20064784
+4.	Yu X, Jarvis I, Davis Z, van den Bosch M, & Davies H. Reductions in community noise levels in Vancouver, Canada, during pandemic lockdown and association with land cover type. Environmental Research. doi: 10.1016/j.envres.2023.117064
+## Book Chapter 
+1.	Kuczynski G., Yu X, Aravindakshan A., Bhatti P., Brook J., Doiron D., Dummer T., Syer J., & White K. (2024). Chapter 6: Cohort Studies and Context: Infrastructure to Support Cancer Prevention. In T. Dummer (Ed.), Understanding Cancer Prevention through Geospatial Science: Putting Cancer in its Place (Global Perspectives on Health Geography, Springer). doi: 10.1007/978-3-031-66413-7_5
 
 
